k8s/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraudbot-deployment
spec:
  selector:
    matchLabels:
      app: fraudbot
  template:
    metadata:
      labels:
        app: fraudbot
    spec:
      containers:
      - name: fraudbot
        image: rfdickerson/fraud-bot:latest
